# xbox-pc-porting-guide

./: README.md  xbox-porting-guide.md
.github/workflows/: ci.yml
docs/: learning-roadmap.md  ninja-gaiden-black-case-study.md
toolkit/: README.md  pyproject.toml
toolkit/src/xboxport/: __init__.py  cli.py  scaffold.py  xbe.py  xiso.py
toolkit/tests/: test_xbe.py  test_xiso.py
