[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xboxport"
version = "0.1.0"
description = "Disc extraction and XBE inspection toolkit for porting original Xbox games you own to PC"
requires-python = ">=3.9"

[project.scripts]
xboxport = "xboxport.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
